# edac_work

./: .env  .gitignore  .pre-commit-config.yaml  README.md  process_raw_edac.py  pyproject.toml  requirements.txt  sweet.py
cassini_ssr/: plot_cassini.py  process_cassini_ssr.py  process_ephemeris.py  process_mimi.py  process_satrad.py
cassini_ssr/cassini_data/: 20042008_SSR_withLatRadius.csv  20092010_SSR.csv  20112016_SSR_withlatRadius.csv  MIMI_2017_2017_P8orbit5min.txt  SSR_2004_2016.csv  SSR_SBEDBE_Data01312017.csv  SSR_SBEDBE_Data_EOM.csv  cassini_ssr_merged.csv  resampled_cassini_mimi_merged.csv
files/: 11_daily_rate.txt  5_daily_rate.txt  SunSpots_2000-2020.txt  normalized_edac.txt  normalized_edac_nonroll.txt  normalized_edac_roll.txt  resampled_corrected_edac.txt  resampled_corrected_edac_roll.txt  resampled_corrected_patched_edac.txt  resampled_rate_patched_edac.txt
sweet_code/: aurora_new_rates.py  detect_sw_events.py  detrend_edac.py  file_paths.py  main.py  old_sweet_comparison.py  parameters.py  patch_mex_edac.py  plot_functions.py  plot_functions_edac.py  plot_maven_data.py  processing_edac.py  read_euhforia_files.py  read_from_database.py  read_maven_sep_data.py  read_maven_sep_flux_data.py  read_mex_aspera_data.py  read_msl_rad_data.py  read_paper.py  standardize_edac.py  tools.py  validate_cme_events.py  validate_database_events.py  validate_events.py  validate_forbush_decreases.py  validate_maven_events.py  validate_sep_events.py  validate_sweet_events.py
sweet_code/edac/: plot_edac_data.py  plot_functions_edac.py  processing_edac.py
(+11 files in other folders)
