[tool.poetry]
name = "edac_repo"
version = "0.1.0"
description = ""
authors = ["btviet <vietshay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
scipy = "^1.14.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
